turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:44: error: type mismatch;
 found   : Int
 required: java.awt.Color
		setCouleurBrosse(rule(state)(couleurActuelle(colors))(CLR_SUIVANT))
                                                                     ^